[tool.poetry]
name = "track-pulse"
version = "0.1.0"
description = ""
authors = ["Nathan Price"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
