[tool.poetry]
name = "track-pulse"
version = "0.1.0"
description = ""
authors = ["Nathan Price"]
readme = "README.md"
packages = [{include = "database"}, {include = "api"}]


[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "^3.19.0"
pg8000 = "^1.31.1"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
eralchemy2 = "^1.3.8"
uvicorn = "^0.29.0"
fastapi = {extras = ["uvicorn"], version = "^0.110.1"}
xmltodict = "^0.13.0"
pandas = "^2.2.2"
pandas-gbq = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
nest-asyncio = "^1.6.0"
ipywidgets = "^8.1.2"


[tool.poetry.group.db.dependencies]
asyncpg = "^0.29.0"
cloud-sql-python-connector = "^1.8.0"
sqlmodel = "^0.0.16"
sqlalchemy = "^2.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
